Article \n filtering fix, video styling fix on mobile, code snippet light mode fix

--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -9,3 +9,14 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--rs-unit-x6);
+}
+
+.content video {
+  max-width: 100%;
+  border-radius: var(--rs-unit-radius-medium);
+}
