--- a/src/components/MdxContent/MdxContent.module.css
+++ b/src/components/MdxContent/MdxContent.module.css
@@ -20,3 +20,10 @@
   list-style-type: decimal;
   list-style-position: inside;
 }
+
+.ul,
+.ol {
+  display: flex;
+  flex-direction: column;
+  gap: var(--rs-unit-x1);
+}
